# ArthasAI

./: .gitignore  1612.00563.jsonl  2.jsonl  combined.jsonl  cooking.txt  readme.md  requirements.txt  test.jsonl
backend/: .gitignore  Arxiv Markdown 0102027.mmd  Attention_is_All_You_Need.md  SB_Small.md  output.txt  pyproject.toml  test.mmd
backend/backend/: .gitignore  config.py  embeddings.py  main.py  pickle_to_json.py  storage.py  test_together_module.py
backend/backend/Chat_functionality/: chat.py  config.py  dependencies.py  embeddings.py  storage.py  testingStorage.py  together_module.py
backend/backend/Raptor_Markdown/: .gitignore  Arxiv Markdown 0102027_Tree  Nougat_1.mmd  Nougat_1_copy.md  Paper metadata.pkl  Paper_metadata.json  Raptor.py  unpickle.ipynb  upload_Raptor_nodes.py
backend/backend/Raptor_Markdown/papers/: 01_Raptor_Tree  Attention_is_All_Tree  Gene_Paper_Tree
backend/backend/Raptor_Markdown/raptor/: RetrievalAugmentation.py  cluster_utils.py  tree_retriever.py
backend/backend/Raptor_Markdown/raptor_trees/: 0102027_Tree  1003.0146_Tree  1011.0686_Tree  1106.1813_Tree  1207.4708_Tree  1210.5644_Tree  1301.2300_Tree  1302.4964_Tree  1302.6815_Tree  1405.4053_Tree  1411.1784_Tree  1502.01852_Tree  1503.00075_Tree  1505.05770_Tree  1506.03340_Tree  1509.00685_Tree  1511.05493_Tree  1512.03012_Tree  1602.04938_Tree  1602.07360_Tree  1604.07379_Tree  1605.08695_Tree  1605.08803_Tree  1606.01540_Tree  1606.03476_Tree  1606.06357_Tree  1607.01719_Tree  1607.06520_Tree  1609.05473_Tree  1609.07843_Tree  1609.08144_Tree  1610.02391_Tree  1610.08401_Tree  1611.01578_Tree  1612.00563_Tree  (+41 more)
backend/backend/chat_functionality/: chat.py  embeddings.py
backend/backend/models/: chat_models.py  dto_models.py  request_models.py
backend/backend/utils/: cluster_papers.py  embeddings.py  paper.py  workspace.py
backend/offline/: upload_nodes.py
backend/tests/: test_main.py
(+68 files in other folders)
