[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jose Pujol <josepujol21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
neo4j = "^5.19.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"
boto3 = "^1.34.77"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
