[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jose Pujol <josepujol21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
neo4j = "^5.19.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"
boto3 = "^1.34.77"
nest-asyncio = "^1.6.0"
faiss-cpu = "*"
numpy = "1.26.3"
openai = "1.3.3"
scikit-learn = "*"
tenacity = "8.2.3"
tiktoken = "0.5.1"
torch = "*"
umap-learn = "0.5.5"
urllib3 = "1.26.6"
huggingface-hub = "^0.22.2"
sentence-transformers = "^2.6.1"
transformers = "^4.39.3"
einops = "*"
accelerate = "*"
together = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
